REGRESSION (r193286): Promise chain no longer prevent UI refresh <rdar://problem/28062149> https://bugs.webkit.org/show_bug.cgi?id=161291

Reviewed by Geoffrey Garen.

LayoutTests/imported/w3c:

* web-platform-tests/custom-elements/adopted-callback-expected.txt:
* web-platform-tests/custom-elements/upgrading-expected.txt:
* web-platform-tests/html/webappapis/scripting/event-loops/microtask_after_script-expected.txt:
Update results for improved promise support.

Source/WebCore:

Add new subtest to js/dom/Promise.html

* dom/Microtasks.cpp:
(WebCore::MicrotaskQueue::append):
(WebCore::MicrotaskQueue::remove):
(WebCore::MicrotaskQueue::performMicrotaskCheckpoint):
* dom/Microtasks.h:
The microtask queue needs to be completely drained, even of new microtasks added while
the previous task was run. Remove the m_tasksAppendedDuringMicrotaskCheckpoint as it is
no longer needed.

LayoutTests:

* js/dom/Promise.html:
Add a new subtest that ensures the ordering of multiple thenables and a setTimeout.


Canonical link: https://commits.webkit.org/185051@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@211913 268f45cc-cd09-0410-ab3c-d52691b4dbfc